Bug 37945455 - Bump out-of-date test and maven plugin dependencies to latest versions (merge 14.1.1.2206 -> ce/22.06 @ 116412)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v22.06/": change = 116416]